--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="contact.css">
+    <link rel="icon" type="image/x-icon" href="../ST1.JPG">
 </head>
 <body>
 
