--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>STME</title>
     <link rel="stylesheet" href="contact.css">
     <link rel="icon" type="image/x-icon" href="../ST1.JPG">
 </head>
