--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="forthbox">
                         <img src="https://img.freepik.com/free-vector/business-support-concept-illustration_114360-9176.jpg" alt="">
                     </div>
-                    <p>Mosquito Prevention</p>
+                    <p>Profit Stairs</p>
                 </td>
             </tr>
 
@@ -68,27 +68,27 @@
                         <img src="./3d-business-analysis-chart-illustration-png.webp" alt="">
 
                     </div>
-                    <p>Electrical mobility</p>
+                    <p>Analystics Dependent</p>
                 </td>
 
                 <td>
                     <div class="who">
                         <img src="https://i.pinimg.com/474x/e5/80/23/e580233b65cea759c7ff4e0b04de1990.jpg" alt="">
                     </div>
-                    <p>Solar charging station</p>
+                    <p>Rocket Movement</p>
                 </td>
 
                 <td>
                     <div class="whom">
                         <img src="https://cdn0.iconfinder.com/data/icons/business-set-3d-illustration-v1/512/BusinessYSDvOne02.png" alt="">
                     </div>
-                    <p>Cleaning Ocean</p>
+                    <p>Pro-Develop</p>
                 </td>
                 <td>
                     <div class="whose">
                         <img src="https://png.pngtree.com/png-clipart/20231020/original/pngtree-3d-illustration-of-statistics-business-success-png-image_13385411.png" alt="">
                     </div>
-                    <p>Recycling Plastic</p>
+                    <p>Future Stats</p>
                 </td>
             </tr>
         </table>
