--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="firstbox">
                         <img src="./solve-problems.svg" alt="">
                     </div>
-                    <p>Business Idea</p>
+                    <p>Business Ideas</p>
                 </td>
                 <td>
                     <div class="secondbox">
@@ -68,7 +68,7 @@
                         <img src="./3d-business-analysis-chart-illustration-png.webp" alt="">
 
                     </div>
-                    <p>Analystics Dependent</p>
+                    <p>Analytics Dependent</p>
                 </td>
 
                 <td>
