--- a/index.html
+++ b/index.html
@@ -93,6 +93,46 @@
             </tr>
         </table>
     </div>
+
+    <div class="vision">
+        <h1>VISION & Mission</h1>
+        <p id="mission">Keep your dreams alive. Understand to achieve anything
+            requires faith and belief in yourself, vision, hard work,
+            determination, and dedication. Remember all things are
+            possible for those who believe
+            </p>
+
+            <h2>Vision</h2>
+            <p id="vis">At 1st Move Enterprises, our vision is to
+                revolutionize the distribution sector in Pakistan by
+                becoming the foremost choice for consumers and
+                partners alike. We aspire to continuously innovate
+                and diversify our offerings while upholding the
+                highest standards of quality and reliability.
+                Through strategic growth and a customer-centric
+                approach, we aim to foster lasting relationships
+                and drive sustainable development in the
+                communities we serve. Our ultimate goal is to be
+                recognized as the epitome of excellence and
+                integrity in every aspect of our operations</p>
+                <img src="https://png.pngtree.com/png-vector/20240203/ourmid/pngtree-3d-illustration-holographic-abstract-shape-png-image_11536004.png" alt="">
+
+                <h4>Mission</h4>
+                <p id="mis">At 1st Move Enterprises, our mission is to
+                    consistently exceed customer expectations by
+                    delivering a diverse range of high-quality products
+                    with efficiency and reliability. We are committed
+                    to fostering mutually beneficial partnerships and
+                    contributing positively to the communities we
+                    serve. Through innovation and continuous
+                    improvement, we strive to set new standards of
+                    excellence in the distribution industry while
+                    maintaining integrity and sustainability in all our
+                    endeavors.
+                    </p>
+
+                    <img id="nestring" src="https://png.pngtree.com/png-vector/20240128/ourmid/pngtree-bold-3d-blue-symbol-png-image_11505292.png" alt="">
+    </div>
 </center>
 
 <div class="brain">
